Bug 52811 - Web Order: UI: need to align 'Remove' loyalty pop-up

--- a/skins/retail/css/main.css
+++ b/skins/retail/css/main.css
@@ -652,6 +652,7 @@ input[type="radio"]:checked + .radio::before,
     margin: 0;
     letter-spacing: -50px;
     direction: rtl;
+    font-size: 0;
 }
 
 #popup_panel[id] > input[type='button'] {
