--- a/skins/weborder/css/main.css
+++ b/skins/weborder/css/main.css
@@ -596,6 +596,7 @@ input[type="radio"]:checked + .radio::before,
     margin: 0;
     letter-spacing: -50px;
     direction: rtl;
+    font-size: 0;
 }
 
 #popup_panel[id] > input[type='button'] {
